Fixing double tap bug on iOS

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
   -moz-user-select: text;
   user-select: text;
   pointer-events: text;
+  touch-action: manipulation;
   overflow-x: hidden;
   opacity: 0;
   -webkit-overflow-scrolling: touch;
